--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
     <div class="encriptar">
         <textarea 
-        name="texti" 
+        name="texto" 
         class="texto" 
         id="texto" 
         cols="30" 
@@ -33,13 +33,14 @@
         </div>
     
     <div class="encriptado">
-        <img src="" alt="" id="muñeco">
+        <img src="img/meñeco.jpg" alt="" id="muñeco">
         <div class="mensaje-encriptado" id="mensaje-encriptado">
-            <h2 id="titulo-mensaje">Ningun mensaje encriptado</h2>
-            <p id="parrafo">Ingresa el texto que deseas encriptar</p>
-            <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>
+            <h2 id="titulo-mensaje">Ningun mensaje fue encontrado</h2>
+            <p id="parrafo">Ingresa el texto que deseas encriptar o desencriptar</p>
+            <!-- <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea> -->
         </div>
     </div>
+</div>
 </div>
 </body>
     <script src="index.js"></script>
